<resources>
    <string name="app_name">ForLife</string>
    <string-array name="blood">
        <item>0+</item>
        <item>0-</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>Nu știu</item>
    </string-array>
    <string-array name="sex">
        <item>Feminin</item>
        <item>Masculin</item>
    </string-array>
    <string-array name="judet">
        <item>Alba</item>
        <item>Arad</item>
        <item>Argeș</item>
        <item>Bacău</item>
        <item>Bihor</item>
        <item>Bistrița-Năsăud</item>
        <item>Botoșani</item>
        <item>Brașov</item>
        <item>Brăila</item>
        <item>București</item>
        <item>Buzău</item>
        <item>Caraș-Severin</item>
        <item>Călărași</item>
        <item>Cluj</item>
        <item>Constanța</item>
        <item>Covasna</item>
        <item>Dâmbovița</item>
        <item>Dolj</item>
        <item>Galați</item>
        <item>Giurgiu</item>
        <item>Gorj</item>
        <item>Harghita</item>
        <item>Hunedoara</item>
        <item>Ialomița</item>
        <item>Iași</item>
        <item>Maramureș</item>
        <item>Mehedinți</item>
        <item>Mureș</item>
        <item>Neamț</item>
        <item>Olt</item>
        <item>Prahova</item>
        <item>Satu Mare</item>
        <item>Sălaj</item>
        <item>Sibiu</item>
        <item>Suceava</item>
        <item>Teleorman</item>
        <item>Timiș</item>
        <item>Tulcea</item>
        <item>Vaslui</item>
        <item>Vâlcea</item>
        <item>Vrancea</item>
    </string-array>
    <string-array name="addresses">
        <item>B-dul Revoluţiei 1989 nr.23</item>
        <item>Str. Mihăiţă Filipescu nr. 12-14</item>
        <item>Str.Andrenyi Karoly nr. 2-4</item>
        <item>Str. Mărăşeşti nr.22</item>
        <item>Str. G. Coşbuc nr.20A</item>
        <item>Str. M. Kogălniceanu nr.11</item>
        <item>Str. N. Bălcescu nr.11A</item>
        <item>Str. Marchian nr.91</item>
        <item>Str. V. Babeş nr.21</item>
        <item>Str. R. Câmpineanu nr.25</item>
        <item>Str. G-ral Grigore Baştan nr.2</item>
        <item>Str. Bărăganului nr.1</item>
        <item>Str. N. Bălcescu nr.18</item>
        <item>Str. N. Iorga nr.85</item>
        <item>Str. Tabaci nr.1</item>
        <item>Str. I.C.Brătianu nr.4</item>
        <item>Str. 22 Decembrie, bl.D1, parter</item>
        <item>Str. 22 Decembrie nr.1</item>
        <item>Str. Carol I nr.16</item>
        <item>Str. Cuza Vodă nr.50-52</item>
        <item>Str. Regiment 11 Siret nr. 48A</item>
        <item>Şos. Alexandriei nr.7-9</item>
        <item>Str. N. Bălcescu nr.21</item>
        <item>Aleea Avântului nr.1</item>
        <item>Str. Louis Pasteur nr.30</item>
        <item>Str. Traian nr.5</item>
        <item>Str. N. Vodă nr.43</item>
        <item>Str. Poenaru Bordea 12</item>
        <item>Şos. Vestului nr.24A</item>
        <item>Str. I.L. Caragiale nr.1</item>
        <item>Str. G-ral Magheru nr.54</item>
        <item>Str. Careului nr.26</item>
        <item>Str. Banki Donath nr.15A</item>
        <item>B-dul C.Coposu nr.2-4</item>
        <item>Str. Ec. Theodoroiu nr.3</item>
        <item>Str. Decebal nr.1</item>
        <item>B-dul 1 Dec. 1918 nr.11</item>
        <item>Str. 22 Decembrie nr.22bis</item>
        <item>Str. Molter Karoly nr.2</item>
        <item>Str. Martir Marius Ciopec nr.1</item>
        <item>Str. Gloriei nr.22</item>
        <item>Str. Simion Bărnuţiu nr.91</item>
        <item>Str. C.Caracaş nr.2-8, sector 1</item>
        <item>Calea Floreasca nr.8, sector 1</item>
        <item>Sos.Fundeni nr 258, Sector 2</item>
        <item>Str. Calea Plevnei nr.134, sector 1</item>
        <item>Splaiul Independentei nr.16</item>
    </string-array>
    <string-array name="centres">
        <item>CTS Alba</item>
        <item>CTS Alexandria</item>
        <item>CTS Arad</item>
        <item>CTS Bacău</item>
        <item>CTS Baia Mare</item>
        <item>CTS Bârlad</item>
        <item>CTS Bistriţa</item>
        <item>CTS Botoşani</item>
        <item>CTS Braşov</item>
        <item>CTS Brăila</item>
        <item>CTS Buzău</item>
        <item>CTS Călăraşi</item>
        <item>CTS Cluj</item>
        <item>CTS Constanţa</item>
        <item>CTS Craiova</item>
        <item>CTS Târgovişte</item>
        <item>CTS Deva</item>
        <item>CTS Petroșani</item>
        <item>CTS Dr.Tr. Severin</item>
        <item>CTS Focşani</item>
        <item>CTS Galaţi</item>
        <item>CTS Giurgiu</item>
        <item>CTS Iaşi</item>
        <item>CTS Mc. Ciuc</item>
        <item>CTS Oradea</item>
        <item>CTS Piatra Neamţ</item>
        <item>CTS Piteşti</item>
        <item>CTS Câmpulung Muscel</item>
        <item>CTS Ploieşti</item>
        <item>CTS Reşiţa</item>
        <item>CTS Rm. Vâlcea</item>
        <item>CTS Satu Mare</item>
        <item>CTS Sf. Gheorghe</item>
        <item>CTS Sibiu</item>
        <item>CTS Slatina</item>
        <item>CTS Slobozia</item>
        <item>CTS Suceava</item>
        <item>CTS Tg. Jiu</item>
        <item>CTS Tg. Mureş</item>
        <item>CTS Timişoara</item>
        <item>CTS Tulcea</item>
        <item>CTS Zalău</item>
        <item>CTSM Bucureşti</item>
        <item>PRS Spitalul de Urgență Floreasca</item>
        <item>PRS Institutul Clinic Fundeni</item>
        <item>PRS Spitalul Militar</item>
        <item>PRS Spitalul Universitar de Urgență</item>
    </string-array>
    <string-array name="telefon">
        <item>0258 835184</item>
        <item>0247 311998</item>
        <item>0357 432914</item>
        <item>0234 535769</item>
        <item>0362 808018</item>
        <item>0335 414488</item>
        <item>0363 401315</item>
        <item>0331 401627</item>
        <item>0368 001123</item>
        <item>0339 401784</item>
        <item>0338 401493</item>
        <item>0342 401026</item>
        <item>0364 417641</item>
        <item>0341 170931</item>
        <item>0351 432059</item>
        <item>0245 210913</item>
        <item>0354 411030</item>
        <item>0354 402619</item>
        <item>0352 401613</item>
        <item>0337 401392</item>
        <item>0336 401906</item>
        <item>0246 215048</item>
        <item>0332 800749</item>
        <item>0366 401206</item>
        <item>0359 179884</item>
        <item>0233 211058</item>
        <item>0348 430639 </item>
        <item>0348 410504</item>
        <item>0344 401012</item>
        <item>0355 423172</item>
        <item>0350 414881</item>
        <item>0361 420905</item>
        <item>0367 401164</item>
        <item>0369 430990</item>
        <item>0349 416499</item>
        <item>0243 233017</item>
        <item>0330 401674</item>
        <item>0353 808889</item>
        <item>0365 430179</item>
        <item>0356 175711</item>
        <item>0340 401079</item>
        <item>0360 401061</item>
        <item>031 4251230</item>
        <item>021 599 2300</item>
        <item>021 2750500</item>
        <item>021 319 3051</item>
        <item>021 319 3051</item>
    </string-array>
    <string-array name="emails">
        <item>ctsalba@yahoo.com</item>
        <item>ctsalexandria@yahoo.com</item>
        <item>ctsarad@yahoo.com</item>
        <item>ctsbacau@yahoo.com</item>
        <item>ctsbaiamare@yahoo.com</item>
        <item>ctsbarlad@yahoo.com</item>
        <item>ctsbistrita@yahoo.com</item>
        <item>ctsbotosani@yahoo.com</item>
        <item>ctsbrasov@yahoo.com</item>
        <item>ctsbraila@yahoo.com</item>
        <item>ctsbuzau@yahoo.com</item>
        <item>ctscalarasi@yahoo.com</item>
        <item>ctscluj@yahoo.com</item>
        <item>ctsconstanta@yahoo.com</item>
        <item>ctscraiova@yahoo.com</item>
        <item>ctstargoviste@yahoo.com</item>
        <item>ctsdeva@yahoo.com</item>
        <item>ctspetrosani@yahoo.com</item>
        <item>ctsdrtrseverin@yahoo.com</item>
        <item>ctsfocsani@yahoo.com</item>
        <item>ctsgalati@yahoo.com</item>
        <item>ctsgiurgiu@yahoo.com</item>
        <item>ctsiasi@yahoo.com</item>
        <item>ctsmcciuc@yahoo.com</item>
        <item>ctsoradea@yahoo.com</item>
        <item>ctspiatraneamt@yahoo.com</item>
        <item>ctspitesti@yahoo.com</item>
        <item>ctscampulungmuscel@yahoo.com</item>
        <item>ctsploiesti@yahoo.com</item>
        <item>ctsresita@yahoo.com</item>
        <item>ctsrmvalcea@yahoo.com</item>
        <item>ctssatumare@yahoo.com</item>
        <item>ctssfgheorghe@yahoo.com</item>
        <item>ctssibiu@yahoo.com</item>
        <item>ctsslatina@yahoo.com</item>
        <item>ctsslobozia@yahoo.com</item>
        <item>ctssuceava@yahoo.com</item>
        <item>ctstgjiu@yahoo.com</item>
        <item>ctstgmures@yahoo.com</item>
        <item>ctstimisoara@yahoo.com</item>
        <item>ctstulcea@yahoo.com</item>
        <item>ctszalau@yahoo.com</item>
        <item>enisierosu@gmail.com</item>
        <item>prsfloreasca@yahoo.com</item>
        <item>prsfundeni@yahoo.com</item>
        <item>prsmilitar@yahoo.com</item>
        <item>prsuniversitar@yahoo.com</item>
    </string-array>
    <string-array name="transition">
        <item> Gestul tău poate salva până la 3 vieți!</item>
        <item> Vrei să fii un salvator? Donează</item>
    </string-array>
    <string name="specialCases">
        Pe această pagină găsiți cazuri ale unor persoane, care au nevoie de sânge și au fost dispuse să-și facă publică situația.
        Puteți să vă faceți rezervare pentru aceste persoane sau să vă anunțați cunoștințele. :)
        \n<b>Respectați grupa de sânge. Mulțumim!</b>
    </string>
    <string-array name="benefits">
        <item></item>
        <item> Doar împreună ne putem ridica</item>
        <item> Nu ezita.\n Salvează și tu vieți. </item>
        <item> În acest moment, cineva sigur are nevoie de ajutorul tău.</item>
        <item> Donate your Love\n Give smiles</item>
        <item><font color='black' layout_marginLeft='10dp'> Bucură-te și tu\n cu cei ajutați!</font></item>
    </string-array>
    <string name="benefits1"><b>ZI DE CONCEDIU PLĂTIT</b>\n\n
    Pentru fiecare donare de sânge, ai dreptul la o zi suplimentară de concediu plătit!</string>
    <string name="benefits2"><b>ANALIZE GRATUITE</b>\n\n
    Beneficiezi de un set de analize gratuit: RH, grupa sangvină, Hepatita B, C, HIV, leucemie, sifilis şi probe hepatice.</string>
    <string name="benefits3"><b>BONURI DE MASĂ</b>\n\n
    Fiecare donator primeşte 7 bonuri de masă în valoare totală de 60 lei.</string>
    <string name="benefits4"><b>CREŞTEREA IMUNITĂŢII</b>\n\n
    Dupa ce donezi, corpul tău îşi reface cantitatea de sânge necesară în corp, proces care împrospătează sângele şi creşte imunitatea.</string>
    <string name="benefits5"><b>SALVEZI 3 VIEŢI</b>\n\n
    Donează și poți salva până la 3 vieți!</string>
    <string name="benefits6"><b>PERIODICE</b>\n\n
    În perioada concertelor mari (e.g. UNTOLD) se primesc bilete gratuite dacă donezi. Fii cu ochii pe evenimente și donează!</string>
    <string name="video">
        \t\tVideoclipul de mai sus este despre o fetiță, care a avut nevoie de sânge și a cărei viață a fost salvată datorită donatorilor de sânge.
        Acesta este preluat de pe YouTube. Este în engleză tocmai pentru că nu a fost găsit unul din România și acest lucru denotă lipsa acută de donatori din țara noastră.
        Mai jos veți găsi și alte cazuri fericite din centrele din România.\n Salvează vieți. Donează!
    </string>
    <string name="hello_blank_fragment">Hello home fragment</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
</resources>