<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DonationBenefitActivity">

    <LinearLayout
        android:id="@+id/imageBack"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="250dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_back"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="23dp"
            app:navigationIcon="@drawable/ic_arrow_back" />

        <com.tomer.fadingtextview.FadingTextView
            android:id="@+id/fadingText"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="@dimen/fab_margin"
            android:fontFamily="@font/amethysta"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:texts="@array/benefits"
            app:timeout="3000" />
    </LinearLayout>

    <ScrollView
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_marginTop="25dp"
                    android:textColor="@color/colorAccent"
                    android:paddingLeft="16dp"
                    android:text="Ce beneficii există?">
                </TextView>

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="79dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/benefits" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:layout_height="match_parent"
                android:textSize="19sp"
                android:text="@string/benefits1">
            </TextView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:background="@color/lichen3"/>
            <TextView
                android:layout_width="match_parent"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:layout_height="match_parent"
                android:textSize="19sp"
                android:text="@string/benefits2">
            </TextView>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:background="@color/lichen3"/>
            <TextView
                android:layout_width="match_parent"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:layout_height="match_parent"
                android:textSize="19sp"
                android:text="@string/benefits3">
            </TextView>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:background="@color/lichen3"/>
            <TextView
                android:layout_width="match_parent"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:layout_height="match_parent"
                android:textSize="19sp"
                android:text="@string/benefits4">
            </TextView>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:background="@color/lichen3"/>
            <TextView
                android:layout_width="match_parent"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:layout_height="match_parent"
                android:textSize="19sp"
                android:text="@string/benefits5">
            </TextView>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:background="@color/lichen3"/>
            <TextView
                android:layout_width="match_parent"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:layout_height="match_parent"
                android:textSize="19sp"
                android:text="@string/benefits6">
            </TextView>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:background="@color/lichen3"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>